RESOLVED FIXED195339
op_switch_char broken for rope strings after JSRopeString layout rewrite
https://bugs.webkit.org/show_bug.cgi?id=195339
Summary op_switch_char broken for rope strings after JSRopeString layout rewrite
Saam Barati
Reported 2019-03-05 13:18:46 PST
...
Attachments
patch (4.93 KB, patch)
2019-03-05 13:24 PST, Saam Barati
no flags
patch (4.94 KB, patch)
2019-03-05 13:26 PST, Saam Barati
ysuzuki: review+
patch for landing (5.54 KB, patch)
2019-03-05 14:39 PST, Saam Barati
no flags
Saam Barati
Comment 1 2019-03-05 13:19:59 PST
Saam Barati
Comment 2 2019-03-05 13:24:57 PST
Saam Barati
Comment 3 2019-03-05 13:26:15 PST
Yusuke Suzuki
Comment 4 2019-03-05 13:29:45 PST
Comment on attachment 363681 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=363681&action=review r=me with a comment. > Source/JavaScriptCore/llint/LowLevelInterpreter32_64.asm:1792 > loadp JSString::m_fiber[t0], t0 Why not using `t1` for fiber0? Then, I think we do not need to add `move`.
Saam Barati
Comment 5 2019-03-05 14:39:10 PST
Created attachment 363691 [details] patch for landing
WebKit Commit Bot
Comment 6 2019-03-05 16:20:13 PST
Comment on attachment 363691 [details] patch for landing Clearing flags on attachment: 363691 Committed r242519: <https://trac.webkit.org/changeset/242519>
WebKit Commit Bot
Comment 7 2019-03-05 16:20:14 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.