op_switch_char broken for rope strings after JSRopeString layout rewrite https://bugs.webkit.org/show_bug.cgi?id=195339 <rdar://problem/48592545>

Reviewed by Yusuke Suzuki.

JSTests:

* stress/switch-on-char-llint-rope.js: Added.

Source/JavaScriptCore:

When we did the JSString rewrite, we accidentally broke LLInt's switch_char
for rope strings. That change made it so that we always go to the slow path
for ropes. That's wrong. The slow path should only be taken when the rope
is of length 1. For lengths other than 1, we need to fall through to the
default case. This patch fixes this.

* llint/LowLevelInterpreter32_64.asm:
* llint/LowLevelInterpreter64.asm:
* runtime/JSString.h:


Canonical link: https://commits.webkit.org/209686@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242519 268f45cc-cd09-0410-ab3c-d52691b4dbfc